// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should match snapshot with predictiveSearch 1`] = `
<form
  className="ter-search-bar"
  onSubmit={[Function]}
>
  <input
    className="ter-search-bar__input"
    onChange={[Function]}
    placeholder="Search"
    type="text"
    value="d"
  />
  <button
    className="ter-search-bar__submit"
  >
    Submit
  </button>
  <ul>
    <li
      key="dog-0"
    >
      dog
    </li>
    <li
      key="bird-1"
    >
      bird
    </li>
  </ul>
</form>
`;

exports[`SearchBar should match snapshot without placeholder props 1`] = `
<form
  className="ter-search-bar"
  onSubmit={[Function]}
>
  <input
    className="ter-search-bar__input"
    onChange={[Function]}
    placeholder="Search"
    type="text"
    value=""
  />
  <button
    className="ter-search-bar__submit"
  >
    Submit
  </button>
</form>
`;

exports[`SearchBar should match the snapshot 1`] = `
<form
  className="ter-search-bar"
  onSubmit={[Function]}
>
  <input
    className="ter-search-bar__input"
    onChange={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
  <button
    className="ter-search-bar__submit"
  >
    Submit
  </button>
</form>
`;
